--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header and Footer</title>
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
-</head>
-<body>
+  <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB Clone</title>
+	<link rel="stylesheet" href="styles/2-common.css">
+	<link rel="stylesheet" href="styles/2-header.css">
+	<link rel="stylesheet" href="styles/2-footer.css">
+  </head>
 
-    <!-- Header -->
-    <header></header>
+  <body>
+	<!-- Header -->
+	<header>
+	</header>
 
-    <!-- Footer -->
-    <footer>
-        <p>Best School</p>
-    </footer>
+	<!-- Footer -->
+	<footer>
+	  <p>Best School</p>
+	</footer>
 
-</body>
+  </body>
 </html>
