--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header and Footer</title>
-    <link rel="stylesheet" href="styles/3-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-</head>
-<body>
+  <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB Clone</title>
+	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="icon" href="images/icon.png">
 
-    <!-- Header -->
-    <header>
-        <div class="logo"></div>
-    </header>
+  </head>
+  <body>
+	<!-- Header -->
+	<header>
+	    <div class="logo"></div>
+	</header>
 
-    <!-- Footer -->
-    <footer>
-        <p>Best School</p>
-    </footer>
+	<!-- Footer -->
 
-</body>
+	<footer>
+	     <p>Best School</p>
+	</footer>
+  </body>
 </html>
