--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header, Footer, and Filters</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/5-filters.css">
-</head>
-<body>
+  <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB Clone</title>
+	<link rel="stylesheet" href="styles/4-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="stylesheet" href="styles/5-filters.css">
+  </head>
 
-    <!-- Header -->
-    <header>
-        <div class="logo"></div>
-    </header>
+  <body>
+	<!-- Header -->
+	<header>
+	    <div class="logo">
+	    </div>
+	</header>
 
-    <!-- Container -->
-    <div class="container">
-        <!-- Filter section -->
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>Fake contents for states</h4>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Fake contents for amenities</h4>
-            </div>
-            <button class="search-btn">Search</button>
-        </section>
-    </div>
+	<!-- Container -->
+	<div class="container">
+	    <!-- Filter section -->
+	    <section class="filters">
+		<div class="locations">
+		    <h3>States</h3>
+		    <h4>Select States</h4>
+		</div>
+		<div class="amenities">
+		    <h3>Amenities</h3>
+		    <h4>Select Amenities</h4>
+		</div>
+		<button class="search-btn">Search
+		</button>
+	    </section>
+	</div>
 
-    <!-- Footer -->
-    <footer>
-        <p>Best School</p>
-    </footer>
-
-</body>
+	<!-- Footer -->
+	<footer>
+	    <p>Best School</p>
+	</footer>
+  </body>
 </html>
