--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -19,28 +19,29 @@
 	    <!-- Filter section -->
 	    <section class="filters">
 		<div class="locations">
-		    <h3>Locations</h3>
-		    <ul class="popover">
-			<li>
-			    <h2>State</h2>
-			    <ul>
-				<li>Lagos</li>
-				<li>Abuja</li>
-			    </ul>
-			</li>
-		    </ul>
+		     <h3>States</h3>
+		     <h4>Any state is wonderful</h4>
+		     <ul class="popover">
+			  <li><h2>Rivers-State</h2>
+			      <ul>
+				  <li>Port-Harcourt</li>
+				  <li>Nembe</li>
+			      </ul>
+			  </li>
+		     </ul>
 		</div>
 		<div class="amenities">
-		    <h3>Amenities</h3>
-		    <ul class="popover">
-			<li>
-			    <h2>Category 1</h2>
-			    <ul>
-				<li>Wifi</li>
-				<li>Pool</li>
-			    </ul>
-			</li>
-		    </ul>
+		     <h3>Amenities</h3>
+		     <h4>Choose any of the amenities</h4>
+		     <ul class="popover">
+			  <li>
+			      <h2>Category 1</h2>
+			      <ul>
+				  <li>Wifi</li>
+				  <li>Pool</li>
+			      </ul>
+			  </li>
+		     </ul>
 		</div>
 		<button class="search-btn">Search</button>
 	    </section>
