--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/6-filters.css">
+	<link rel="icon" href="../images/icon.png">
+	<link rel="logo" href="../images/logo.png">
+
  </head>
  <body>
 	<!-- Header -->
@@ -26,6 +29,13 @@
 			      <ul>
 				  <li>Port-Harcourt</li>
 				  <li>Nembe</li>
+			      </ul>
+			  </li>
+			  <li>
+			      <h2>Lagos</h2>
+			      <ul>
+				  <li>Victoria-Island</li>
+				  <li>Ikeja</li>
 			      </ul>
 			  </li>
 		     </ul>
