--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header, Footer, Filters, and Places</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/7-places.css">
-</head>
-<body>
+  <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>AirBnB Clone</title>
+	<link rel="stylesheet" href="styles/4-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="stylesheet" href="styles/6-filters.css">
+	<link rel="stylesheet" href="styles/7-places.css">
+	<link rel="icon" href="../images/icon.png">
+        <link rel="logo" href="../images/logo.png">
 
-    <!-- Header -->
-    <header>
-        <div class="logo"></div>
-    </header>
-
-    <!-- Container -->
-    <div class="container">
-        <!-- Filters section -->
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>Fake contents for states</h4>
-                <ul class="popover">
-                    <li><h2>State 1</h2>
-                        <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                        </ul>
-                    </li>
-                    <li><h2>State 2</h2>
-                        <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Fake contents for amenities</h4>
-                <ul class="popover">
-                    <li>Fake amenity 1</li>
-                    <li>Fake amenity 2</li>
-                    <li>Fake amenity 3</li>
-                </ul>
-            </div>
-            <button class="search-btn">Search</button>
-        </section>
-
-        <!-- Places section -->
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>Place 1</h2>
-            </article>
-            <article>
-                <h2>Place 2</h2>
-            </article>
-            <!-- Add more articles for additional places -->
-        </section>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <p>Best School</p>
-    </footer>
-
-</body>
+  </head>
+  <body>
+	<!-- Header -->
+	<header>
+	     <div class="logo"></div>
+	</header>
+	<!-- Container -->
+	<div class="container">
+	     <!-- Filters section -->
+	     <section class="filters">
+		 <div class="locations">
+		      <h3>States</h3>
+		      <h4>Any state is wonderful</h4>
+		      <ul class="popover">
+			   <li><h2>Rivers-State</h2>
+			       <ul>
+				  <li>Port-Harcourt</li>
+				  <li>Nembe</li>
+			       </ul>
+			   </li>
+			   <li><h2>Lagos</h2>
+			       <ul>
+				   <li>Victoria-Island</li>
+				   <li>Ikeja</li>
+			       </ul>
+			   </li>
+		      </ul>
+		 </div>
+		 <div class="amenities">
+		       <h3>Amenities</h3>
+		       <h4>Choose any of the amenities</h4>
+		       <ul class="popover">
+			       <li>Wifi</li>
+			       <li>Pool</li>
+			       <li>Heater</li>
+			       <li>Electricity</li>
+		       </ul>
+		 </div>
+		 <button class="search-btn">Search</button>
+	     </section>
+	     <!-- Places section -->
+	     <section class="places">
+		 <h1>Places</h1>
+		 <article>
+		      <h2>Cosy Cottage</h2>
+		 </article>
+		 <article>
+		      <h2>Riverside Retreat</h2>
+		 </article>
+		 <article>
+                      <h2>Serene Apartment</h2>
+                 </article>
+		 <article>
+		      <h2>Stylish Studio</h2>
+                 </article>
+	     </section>
+	</div>
+	<!-- Footer -->
+	<footer>
+	    <p>Best School</p>
+	</footer>
+  </body>
 </html>
