--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,91 +1,194 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header, Footer, Filter Box, and Results</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AirBnB clone</title>
+  <link rel="icon" href="images/icon.png" type="image/png">
+  <link rel="stylesheet" href="styles/4-common.css">
+  <link rel="stylesheet" href="styles/3-header.css">
+  <link rel="stylesheet" href="styles/3-footer.css">
+  <link rel="stylesheet" href="styles/6-filters.css">
+  <link rel="icon" href="../images/icon.png">
+  <link rel="logo" href="../images/logo.png">
+
 </head>
 <body>
-
-    <!-- Header -->
-    <header>
-        <div class="logo"></div>
-    </header>
-
-    <!-- Container -->
-    <div class="container">
-        <!-- Filters section -->
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>Fake contents for states</h4>
-                <ul class="popover">
-                    <li><h2>State 1</h2>
-                        <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                        </ul>
-                    </li>
-                    <li><h2>State 2</h2>
-                        <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Fake contents for amenities</h4>
-                <ul class="popover">
-                    <li>Fake amenity 1</li>
-                    <li>Fake amenity 2</li>
-                    <li>Fake amenity 3</li>
-                </ul>
-            </div>
-            <button class="search-btn">Search</button>
-        </section>
-
-        <!-- Places section -->
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>Place 1</h2>
-                <div class="price_by_night">$100</div>
-                <div class="information">
-                    <div class="max_guest">
-                        <i class="fas fa-users"></i>
-                        Max Guests: 4
-                    </div>
-                    <div class="number_rooms">
-                        <i class="fas fa-bed"></i>
-                        Bedrooms: 2
-                    </div>
-                    <div class="number_bathrooms">
-                        <i class="fas fa-bath"></i>
-                        Bathrooms: 2
-                    </div>
-                </div>
-                <div class="user">
-                    <strong>Owner:</strong> Fake owner
-                </div>
-                <div class="description">
-                    Fake description
-                </div>
-            </article>
-            <!-- Add more articles for additional places -->
-        </section>
+  <header>
+    <div class="image">
     </div>
-
-    <!-- Footer -->
-    <footer>
-        <p>Best School</p>
-    </footer>
-
+  </header>
+  <div class="container">
+    <section class="filters">
+      <div class="locations dropdown">
+	<h3>States</h3>
+	<h4>Any state is wonderful</h4>
+	<ul class="popover-list">
+	  <li>
+	    <h2>Rivers-State:</h2>
+	  </li>
+	  <li>
+	    <ul>
+	      <li>Port-Harcourt</li>
+	      <li>Nembe</li>
+	      <li><br /></li>
+	    </ul>
+	  </li>
+	  <li>
+	    <h2>Lagos:</h2>
+	  </li>
+	  <li>
+	    <ul>
+	      <li>Victoria-Island</li>
+	      <li>Ikeja</li>
+	      <li><br /></li>
+	    </ul>
+	  </li>
+	</ul>
+      </div>
+      <div class="amenities popover">
+	<h3>Amenities</h3>
+	<h4>Choose any of the amenities</h4>
+	<ul class="popover-list">
+	  <li>Wifi</li>
+	  <li>Pool</li>
+	  <li>Heater</li>
+	  <li>Electricity</li>
+	</ul>
+	</div>
+        </section>
+        <section class="places">
+            <div class="places_title">
+                <h1>Places</h1>
+            </div>
+            <div class="articles">
+                <article>
+                    <div class="price_title">
+                        <div class="article_title">
+                            <h2>Cosy Cottage</h2>
+                        </div>
+                        <div class="price_by_night">
+                            <div class="price">
+                                $100
+                            </div>
+                        </div>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon">
+                            </div>
+                            <div class="guest_number">
+                                <h2>2 Guests</h2>
+                            </div>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="rooms_icon">
+                            </div>
+                            <div class="rooms_number">
+                                <h2>1 Bedroom</h2>
+                            </div>
+                        </div>
+                        <div class="number_bathrooms">
+                            <div class="bathrooms_icon">
+                            </div>
+                            <div class="bathrooms_number">
+                                <h2>1 Bathroom</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Ruth Johnson
+                    </div>
+                    <div class="description">
+			    This is a lovely 1 bedroom and 1 bathroom apartment than can accomodate 2 people.
+		    </div>
+                </article>
+                <article>
+                    <div class="price_title">
+                        <div class="article_title">
+                            <h2>Riverside Retreat</h2>
+                        </div>
+                        <div class="price_by_night">
+                            <div class="price">
+                                $75
+                            </div>
+                        </div>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon">
+                            </div>
+                            <div class="guest_number">
+                                <h2>4 Guests</h2>
+                            </div>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="rooms_icon">
+                            </div>
+                            <div class="rooms_number">
+                                <h2>2 Bedrooms</h2>
+                            </div>
+                        </div>
+                        <div class="number_bathrooms">
+                            <div class="bathrooms_icon">
+                            </div>
+                            <div class="bathrooms_number">
+                                <h2>1 Bathroom</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Adrienne
+                    </div>
+                    <div class="description">
+			    Our place is a private, affordable stand-alone guest house centrally located just minutes to watervilla.
+		<article>
+                <article>
+                    <div class="price_title">
+                        <div class="article_title">
+                            <h2>Serene Apartment</h2>
+                        </div>
+                        <div class="price_by_night">
+                            <div class="price">
+                                $190
+                            </div>
+                        </div>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon">
+                            </div>
+                            <div class="guest_number">
+                                <h2>2 Guests</h2>
+                            </div>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="rooms_icon">
+                            </div>
+                            <div class="rooms_number">
+                                <h2>1 Bedroom</h2>
+                            </div>
+                        </div>
+                        <div class="number_bathrooms">
+                            <div class="bathrooms_icon">
+                            </div>
+                            <div class="bathrooms_number">
+                                <h2>1 Bathroom</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <b>Owner:</b> Beatrice Wiley
+                    </div>
+                    <div class="description">
+                        A well-structured apartment to suite your needs with every fun and comfortable utility, games, etc to help you feel at home always.
+                    </div>
+                </article>
+            </div>
+    </section>
+  </div>
+  <footer class="text">
+       <p>Best School</p>
+  </footer>
 </body>
 </html>
